--- a/src/frontend.css
+++ b/src/frontend.css
@@ -1,11 +1,13 @@
 .firstAns{
-    background-color: blue;
+    background-color: #679eea;
+    color: #fff;
     cursor: pointer;
     font-size: 50px;
     padding: 150px;
 }
 .secondAns{
-    background-color: red;
+    background-color: #E3242B;
+    color: #fff;
     cursor: pointer;
     font-size: 50px;
     padding: 150px;
